# ReformLab

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bmad-assist-anthropic.yaml  bmad-assist-glm.yaml  bmad-assist-haiku.yaml  bmad-assist-zai.yaml  bmad-assist.example.yaml  bmad-assist.legacy.yaml  bmad-assist.yaml  mkdocs.yml  overnight-build.sh  pyproject.toml
.bmad-assist/: state.yaml
.bmad-assist/runs/: run-20260301T162433Z-dfe5eccd.yaml  run-20260301T163026Z-6cdb01f4.yaml  run-20260301T190149Z-ae8684d9.yaml  run-20260302T135114Z-adeab164.yaml  run-20260302T170934Z-c477937e.yaml  run-20260303T095310Z-6fd8b3a3.yaml  run-20260303T103150Z-bc3fe857.yaml  run-20260303T122152Z-df9ba62c.yaml  run-20260303T173643Z-c682d767.yaml  run-20260304T113044Z-1737c4c5.yaml  run-20260304T113509Z-7911b4e6.yaml  run-20260304T113708Z-516a5263.yaml  run-20260304T123347Z-a5a5fd48.yaml  run-20260304T180915Z-9b48926c.yaml  run-20260304T181832Z-f2a61cc4.yaml  run-20260304T213152Z-5c53f892.yaml  run-20260305T070711Z-7193e863.yaml  run-20260305T070907Z-105dfed7.yaml  run-20260305T071247Z-4accb204.yaml  run-20260305T141550Z-bc11fd55.yaml  run-20260305T142427Z-0014cffc.yaml  run-20260305T144106Z-49c558f0.yaml  (+16 more)
.github/workflows/: ci.yml  (+2 more)
.kamal/: secrets.example
.opencode/: opencode.db-shm  opencode.db-wal
_bmad-output/: ideas.md  project-context.md  story-2026-02-25.md
config/: deploy.yml  dozzle-users.yml
docs/: architecture.md  astro.config.mjs  code-review-2026-04-18.md  compatibility.md  deployment-guide.md  development-guide.md  epics.md  extending-reformlab.md  go-to-market-and-ecosystem-strategy.md  index.md  package-lock.json  package.json  phase-1-exit-checklist.md  pilot-checklist.md  planning-artifacts-inventory.md  prd.md  product-delivery-roadmap.md  project-context.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  ux-design-specification.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
notebooks/: advanced.ipynb  advanced.py  epic1_demo.ipynb  epic2_demo.ipynb  epic3_demo.ipynb  epic4_demo.ipynb  epic5_demo.ipynb  population-french-household-example.ipynb  quickstart.ipynb
scripts/: add-spdx-headers.py  check_ai_usage.py  generate_synthetic_population.py
tests/: test_ci_quality_gates.py  test_overnight_build.sh  test_scaffold.py
website/: Dockerfile  astro.config.mjs  nginx.conf  package-lock.json  package.json
(+2642 files in other folders)
