[project]
name = "reformlab"
version = "0.1.0"
description = "OpenFisca-first environmental policy analysis platform"
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=18.0.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
openfisca = [
    "openfisca-core>=44.0.0",
]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reformlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true

[[tool.mypy.overrides]]
module = ["openfisca_core.*", "openfisca_france.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true
