[project]
name = "reformlab"
version = "0.1.0"
description = "OpenFisca-first environmental policy analysis platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.23.0",
    "pyarrow>=18.0.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
openfisca = [
    "openfisca-core>=44.0.0",
]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "nbmake>=1.4",
    "matplotlib>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reformlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/computation/test_openfisca_api_adapter.py" = ["E402"]
"tests/templates/carbon_tax/test_performance.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true

[[tool.mypy.overrides]]
module = ["openfisca_core.*", "openfisca_france.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
